[gd_scene load_steps=5 format=2]

[ext_resource path="res://sprites/chicken.png" type="Texture" id=1]
[ext_resource path="res://entities/Chicken.gd" type="Script" id=2]

[sub_resource type="CircleShape2D" id=1]
radius = 17.0

[sub_resource type="CircleShape2D" id=2]
radius = 5.09902

[node name="Chicken" type="KinematicBody2D"]
collision_layer = 64
collision_mask = 0
script = ExtResource( 2 )

[node name="chicken" type="Sprite" parent="."]
texture = ExtResource( 1 )

[node name="EatingRange" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2147483680

[node name="CollisionShape2D" type="CollisionShape2D" parent="EatingRange"]
shape = SubResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 2 )

[node name="SelectTarget" type="Timer" parent="."]
wait_time = 2.0
autostart = true

[node name="TimeToEat" type="Timer" parent="."]

[node name="RunRunRun" type="Timer" parent="."]
wait_time = 4.0
[connection signal="body_entered" from="EatingRange" to="." method="_on_EatingRange_body_entered"]
[connection signal="body_exited" from="EatingRange" to="." method="_on_EatingRange_body_exited"]
[connection signal="timeout" from="SelectTarget" to="." method="_on_SelectTarget_timeout"]
[connection signal="timeout" from="TimeToEat" to="." method="_on_TimeToEat_timeout"]
[connection signal="timeout" from="RunRunRun" to="." method="_on_RunRunRun_timeout"]
